# Youtube-Instagram-video-transcriber

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_app.bat
.claude/: settings.local.json
src/: __init__.py  main.py
src/config/: __init__.py  app_config.py  settings.py
src/controller/: __init__.py  app_controller.py
src/models/: __init__.py  model_manager.py
src/processing/: __init__.py  audio_extractor.py  instagram_downloader.py  pipeline_manager.py  video_downloader.py  whisper_transcriber.py
src/ui/: __init__.py  components.py  main_window.py  proxy_settings_dialog.py  styles.py
src/utils/: __init__.py  error_handler.py  file_manager.py  gui_helpers.py  network_helper.py  progress_aggregator.py  proxy_manager.py  state_manager.py  url_validator.py  validators.py
