[build-system]
requires = ["setuptools>=69.0.0", "wheel>=0.42.0", "build>=1.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-whisper-transcriber"
version = "1.0.0"
description = "Professional Windows desktop application for transcribing YouTube videos using OpenAI Whisper"
authors = [
    {name = "OPBL Project", email = "noreply@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["youtube", "whisper", "transcription", "ai", "speech-to-text", "desktop", "gui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Environment :: Win32 (MS Windows)",
    "Natural Language :: English",
]
dependencies = [
    "openai-whisper==20231117",
    "torch==2.1.1",
    "torchaudio==2.1.1",
    "transformers==4.35.2",
    "numpy==1.24.4",
    "scipy==1.11.4",
    "yt-dlp==2023.11.16",
    "ffmpeg-python==0.2.0",
    "Pillow==10.1.0",
    "pyinstaller==6.1.0",
    "setuptools==69.0.2",
    "wheel==0.42.0",
    "pathlib2==2.3.7",
    "psutil==5.9.6",
    "tempfile-tools==1.0.0",
    "requests==2.31.0",
    "validators==0.22.0",
    "urllib3==2.1.0",
    "loguru==0.7.2",
    "python-dotenv==1.0.0",
    "configparser==6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "pytest-xdist==3.3.1",
    "pytest-asyncio==0.21.1",
    "pytest-timeout==2.2.0",
    "pytest-xvfb==3.0.0",
    "coverage==7.3.2",
    "black==23.11.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
    "isort==5.12.0",
    "pylint==3.0.3",
    "bandit==1.7.5",
    "types-requests==2.31.0.10",
    "types-setuptools==69.0.0.0",
    "memory-profiler==0.61.0",
    "line-profiler==4.1.1",
    "py-spy==0.3.14",
    "pre-commit==3.5.0",
    "tox==4.11.4",
    "bumpversion==0.6.0",
    "pytest-qt==4.2.0",
    "build==1.0.3",
    "twine==4.0.2",
    "check-manifest==0.49",
]
docs = [
    "sphinx==7.2.6",
    "sphinx-rtd-theme==1.3.0",
    "sphinx-autodoc-typehints==1.25.2",
]
build = [
    "pyinstaller==6.1.0",
    "setuptools==69.0.2",
    "wheel==0.42.0",
    "build==1.0.3",
]

[project.scripts]
youtube-whisper-transcriber = "main:main"

[project.gui-scripts]
youtube-whisper-transcriber-gui = "main:main"

[project.urls]
Homepage = "https://github.com/yourusername/youtube-whisper-transcriber"
Documentation = "https://github.com/yourusername/youtube-whisper-transcriber/docs"
Repository = "https://github.com/yourusername/youtube-whisper-transcriber"
"Bug Reports" = "https://github.com/yourusername/youtube-whisper-transcriber/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["tests*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.yml", "*.yaml", "*.json"]
"assets" = ["*.ico", "*.png", "*.jpg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=85",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests", 
    "gui: marks tests as GUI tests",
]
timeout = 300
testmon = true

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/conftest.py",
    "*/venv/*",
    "*/virtualenv/*",
    "*/.tox/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | htmlcov
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]
known_third_party = [
    "whisper",
    "torch", 
    "torchaudio",
    "yt_dlp",
    "tkinter",
    "PIL",
    "numpy",
    "scipy",
    "requests",
    "validators",
    "loguru",
    "pytest",
]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
strict = true
pretty = true
show_column_numbers = true
show_error_context = true
error_summary = true

[[tool.mypy.overrides]]
module = [
    "whisper.*",
    "yt_dlp.*",
    "torch.*",
    "torchaudio.*",
    "PIL.*",
    "ffmpeg.*",
    "psutil.*",
    "memory_profiler.*",
]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "E501"]
select = ["C", "E", "F", "W", "B", "B950"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".tox",
    ".eggs",
    "*.egg",
]

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "invalid-name", 
    "too-few-public-methods",
    "duplicate-code",
]

[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101", "B601"]